fix scroll menu option mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -37,8 +37,8 @@
 /* --- COMPORTAMIENTO NATIVO DE SCROLL RESPONSIVO --- */
 html {
     scroll-behavior: smooth;
-    /* Base (Celulares): Protegemos el espacio del menú (~54px) */
-    scroll-padding-top: 12rem; 
+    /* Base (Celulares): Protegemos el espacio del menú */
+    scroll-padding-top: 15rem; 
 }
 
 /* --- ESTRUCTURA BASE DE TÍTULOS DE SECCIÓN (MÓVILES) --- */
